Fix line height and problems in <code> element
Lines were overlapping the previous lines slightly and first line was indented.

--- a/web/themes/basicblog/css/style.css
+++ b/web/themes/basicblog/css/style.css
@@ -88,7 +88,8 @@ footer {
 
 code {
     background-color: #f0f0f0;
-    padding: 0.2rem;
+    padding: 0.2rem 0 0.2rem 0;
+    line-height: 1.2rem;
 }
 
 #block-basicblog-siteinfo p {
